--- a/index.html
+++ b/index.html
@@ -49,39 +49,31 @@
             <h3>Rust is type safe</h3>
 
             Python
-            <pre>
-              <code data-trim class="python">
+            <pre><code data-trim class="python">
 def f2c(fahreheit):
     return (fahreheit - 32) / 5 * 9
-              </code>
-            </pre>
+            </code></pre>
 
             Rust
-            <pre>
-              <code data-trim class="Rust">
+            <pre><code data-trim class="Rust">
 fn f2c(fahrenheit: f64) -> f64 {
     (fahrenheit - 32.0) * 5.0 / 9.0
 }
-              </code>
-            </pre>
+            </code></pre>
           </section>
 
           <section>
             <h3>Rust is really type safe</h3>
 
             C
-            <pre>
-              <code data-trim class="C">
+            <pre><code data-trim class="C">
 ssize_t write(int fd, const void *buf, size_t count);
-              </code>
-            </pre>
+            </code></pre>
 
             Rust
-            <pre>
-              <code data-trim class="Rust">
+            <pre><code data-trim class="Rust">
 fn write(&mut self, buf: &[u8]) -> Result&lt;usize&gt;
-              </code>
-            </pre>
+            </code></pre>
 
             <aside class="notes">
               <ul>
@@ -96,20 +88,16 @@ fn write(&mut self, buf: &[u8]) -> Result&lt;usize&gt;
             <h3>Rust is really really type safe</h3>
 
             Java
-            <pre>
-              <code data-trim class="Java">
+            <pre><code data-trim class="Java">
 public static Path createFile(Path path,
                               FileAttribute&lt;?&gt;... attrs)
                        throws IOException
-              </code>
-            </pre>
+            </code></pre>
 
             Rust
-            <pre>
-              <code data-trim class="Rust">
+            <pre><code data-trim class="Rust">
 pub fn create&lt;P: AsRef&lt;Path&gt;&gt;(path: P) -&gt; Result&lt;File&gt;
-              </code>
-            </pre>
+            </code></pre>
 
             <aside class="notes">
               You cannot specify a null path in Rust
@@ -130,8 +118,7 @@ pub fn create&lt;P: AsRef&lt;Path&gt;&gt;(path: P) -&gt; Result&lt;File&gt;
           <section>
             If you want to go even further beyond
 
-            <pre>
-              <code data-trim class="rust">
+            <pre><code data-trim class="rust">
 #[derive(Add, Sub, Copy, Clone)]
 struct Years(i64);
 
@@ -147,8 +134,7 @@ fn main() {
     uptime / uptime; // Compilation Error
 }
 
-              </code>
-            </pre>
+            </code></pre>
 
             <small>How do you say "הגדלת ראש" in English? 🤔</small>
           </section>
@@ -156,8 +142,7 @@ fn main() {
           <section>
             But what if something needs to be nullable
 
-            <pre>
-              <code data-trim class="rust">
+            <pre><code data-trim class="rust">
 fn welcome(maybe_name: Option&lt;&amp;str&gt;) {
     let mut real_name = &quot;John Doe&quot;;
 
@@ -172,8 +157,7 @@ fn main() {
     welcome(Some(&quot;Darwish&quot;));
     welcome(None);
 }
-              </code>
-            </pre>
+            </code></pre>
 
             <aside class="notes">
               Types are automatically inferred in Rust, like auto in C++. This isn't dynamic typing.
@@ -183,8 +167,7 @@ fn main() {
           <section>
             The Rust way
 
-            <pre>
-              <code data-trim class="rust">
+            <pre><code data-trim class="rust">
 fn welcome(maybe_name: Option&lt;&amp;str&gt;) {
     let real_name = maybe_name.unwrap_or(&quot;John Doe&quot;);
     println!(&quot;Welcome {}&quot;, real_name)
@@ -194,20 +177,17 @@ fn main() {
     welcome(Some(&quot;Darwish&quot;));
     welcome(None)
 }
-              </code>
-            </pre>
+            </code></pre>
           </section>
 
           <section>
             As I said, no magic values
 
-            <pre>
-              <code data-trim class="rust">
+            <pre><code data-trim class="rust">
 pub fn find(&amp;self, pat: &amp;Pattern) -&gt; Option&lt;usize&gt;
 
 pub fn create(path: &amp;Path) -&gt; Result&lt;File&gt;
-              </code>
-            </pre>
+            </code></pre>
 
             <aside class="notes">
               <ul>
@@ -221,8 +201,7 @@ pub fn create(path: &amp;Path) -&gt; Result&lt;File&gt;
           <section>
             Result isn't a tuple like in Go
 
-            <pre>
-              <code data-trim class="go">
+            <pre><code data-trim class="go">
 file, err := os.Open("file.go") // For read access.
 if err != nil {
     log.Fatal(err);
@@ -231,16 +210,30 @@ if err != nil {
 
 data := make([]byte, 100)
 count, err := file.Read(data)
-              </code>
-            </pre>
+            </code></pre>
 
-            <pre>
-              <code data-trim class="Rust">
+            <pre><code data-trim class="Rust">
+match File::create("name") {
+    // If it contains an actual file, we'll call it f
+    Ok(mut f) => {
+        f.write(b"Hello");
+    }
+
+    // If it contains an error, we'll call it e
+    Err(e) => {
+        println!("Error: {}", e);
+    },
+}
+            </code></pre>
+          </section>
+
+          <section>
+            There are better ways
+            <pre><code data-trim class="Rust">
 let mut f = File::create("name")?;
 f.write(b"Hello")?;
 println!("File written 👏");
-              </code>
-            </pre>
+            </code></pre>
 
             <aside class="notes">
               The code will not compile if I forget the first question mark.
@@ -250,13 +243,11 @@ println!("File written 👏");
           <section>
             But what if I forget the second question mark?
 
-            <pre>
-              <code data-trim class="Rust">
+            <pre><code data-trim class="Rust">
 let mut f = File::create("name")?;
 f.write(b"Hello");
 println!("File written 👏");
-              </code>
-            </pre>
+            </code></pre>
 
             <pre class="fragment">
               <code data-trim class="nohighlight">
@@ -268,8 +259,7 @@ warning: unused `std::result::Result` that must be used
   |
   = note: #[warn(unused_must_use)] on by default
   = note: this `Result` may be an `Err` variant, which should be handled
-              </code>
-            </pre>
+            </code></pre>
 
             <aside class="notes">
               You can't forget about error handling and you know what can fail
@@ -412,8 +402,7 @@ warning: unused `std::result::Result` that must be used
           <section data-transition="fade-out">
             <h2>Threads are awesome</h2>
 
-            <pre>
-              <code data-trim class="python">
+            <pre><code data-trim class="python">
 import threading
 
 _COUNTER = 0
@@ -439,8 +428,7 @@ if __name__ == "__main__":
 
     print()
     print(_COUNTER)
-              </code>
-            </pre>
+            </code></pre>
 
             <aside class="notes">
               This works by accident and doesn't run in parallel
@@ -450,8 +438,7 @@ if __name__ == "__main__":
           <section data-transition="fade-in fade-out">
             <h2>Threads awesome are</h2>
 
-            <pre>
-              <code data-trim class="python">
+            <pre><code data-trim class="python">
 import threading
 
 _COUNTER = 0
@@ -480,15 +467,13 @@ if __name__ == "__main__":
 
     print()
     print(_COUNTER)
-              </code>
-            </pre>
+            </code></pre>
           </section>
 
           <section data-transition="fade-in fade-out">
             <h2>T̨̕h͏r͞҉e̡͜a͡d͢s̶ ̴͡a̕͏̢w͠e͠s͏o̴m̵͟e̕͡ ̸͏a͜r҉͘͞e̕͞</h2>
 
-            <pre>
-              <code data-trim class="python">
+            <pre><code data-trim class="python">
 import threading
 
 _COUNTER = 0
@@ -505,13 +490,11 @@ def thread_function():
     print(".", end="", flush=True)
     _COUNTER = RAX
 
-              </code>
-            </pre>
+            </code></pre>
           </section>
 
           <section>
-            <pre>
-              <code data-trim class="rust">
+            <pre><code data-trim class="rust">
 let mut threads = vec![];
 let mut counter = 0;
 
@@ -520,15 +503,13 @@ for _ in 0..NTHREADS {
         counter += 1;
     }));
 }
-              </code>
-            </pre>
+            </code></pre>
           </section>
 
           <section>
             <h2>You shall not pass!</h2>
 
-            <pre>
-              <code data-trim class="nohighlight">
+            <pre><code data-trim class="nohighlight">
 error[E0499]: cannot borrow `counter` as mutable more than once at a time
   --> src/main.rs:12:36
    |
@@ -540,14 +521,12 @@ error[E0499]: cannot borrow `counter` as mutable more than once at a time
    | |             ------- borrows occur due to use of `counter` in closure
 14 | |         }));
    | |__________- argument requires that `counter` is borrowed for `'static`
-              </code>
-            </pre>
+            </code></pre>
           </section>
 
           <section>
             Rust has atomic types
-            <pre>
-              <code data-trim class="rust">
+            <pre><code data-trim class="rust">
 let mut threads = vec![];
 let counter = Arc::new(AtomicU32::new(0));
 
@@ -557,14 +536,12 @@ for _ in 0..NTHREADS {
         counter.fetch_add(1, Ordering::SeqCst);
     }));
 }
-              </code>
-            </pre>
+            </code></pre>
           </section>
 
           <section>
             And a mutex
-            <pre>
-              <code data-trim class="rust">
+            <pre><code data-trim class="rust">
 let mut threads = vec![];
 let message_mutex = Arc::new(Mutex::new(String::from("It's over 9000")));
 
@@ -575,8 +552,7 @@ for _ in 0..NTHREADS {
         message.push('!');
     }));
 }
-              </code>
-            </pre>
+            </code></pre>
 
             <aside class="notes">
               <ul>
@@ -591,8 +567,7 @@ for _ in 0..NTHREADS {
         <section>
           <h2>No dangling pointers</h2>
 
-          <pre>
-            <code data-trim class="rust">
+          <pre><code data-trim class="rust">
 let maybe_message: Option<&String>;
 
 {
@@ -601,20 +576,17 @@ let maybe_message: Option<&String>;
 }
 
 println!("{:?}", maybe_message);
-            </code>
-          </pre>
+          </code></pre>
         </section>
 
         <section>
           <h2>No use of invalid resources</h2>
 
-          <pre>
-            <code data-trim class="rust">
+          <pre><code data-trim class="rust">
 let mut f = fs::File::create("sup")?;
 drop(f);
 f.write_all(b"hi!")?;
-            </code>
-          </pre>
+          </code></pre>
 
           <aside class="notes">
             We can't close the file if there's a pointer to it somewhere
@@ -624,8 +596,7 @@ f.write_all(b"hi!")?;
         <section>
           <h2>No mutation of borrowed resources</h2>
 
-          <pre>
-            <code data-trim class="rust">
+          <pre><code data-trim class="rust">
 let mut numbers = vec![1,2,3,4,5,6];
 
 for (index, num) in numbers.iter().enumerate() {
@@ -633,8 +604,7 @@ for (index, num) in numbers.iter().enumerate() {
         numbers.remove(index);
     }
 }
-            </code>
-          </pre>
+          </code></pre>
 
           <aside class="notes">
             None of this is hard-coded
@@ -642,12 +612,10 @@ for (index, num) in numbers.iter().enumerate() {
         </section>
 
         <section>
-          <pre>
-            <code data-trim class="rust">
+          <pre><code data-trim class="rust">
 let mut numbers = vec![1,2,3,4,5,6];
 numbers.retain(|num| *num >= 4);
-            </code>
-          </pre>
+          </code></pre>
         </section>
 
         <section>
@@ -679,6 +647,8 @@ numbers.retain(|num| *num >= 4);
 	  // - https://github.com/hakimel/reveal.js#configuration
 	  // - https://github.com/hakimel/reveal.js#dependencies
 	  Reveal.initialize({
+        controls: false,
+        progress: true,
 		dependencies: [
 		  { src: 'plugin/markdown/marked.js' },
 		  { src: 'plugin/markdown/markdown.js' },
