--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@ f.write(b"Hello");
 println!("File written 👏");
             </code></pre>
 
-            <pre class="fragment">
-              <code data-trim class="nohighlight" style="font-size: 13px">
+            <pre class="fragment"><code data-trim class="nohighlight" style="font-size: 13px">
 warning: unused `std::result::Result` that must be used
  --> src/main.rs:6:5
   |
