--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
             Python
             <pre><code data-trim class="python">
-def f2c(fahreheit):
-    return (fahreheit - 32) / 5 * 9
+def f2c(fahrenheit):
+    return (fahrenheit - 32) / 5 * 9
             </code></pre>
 
             Rust
