Simplify the signature of create

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ public static Path createFile(Path path,
 
             Rust
             <pre><code data-trim class="Rust">
-pub fn create&lt;P: AsRef&lt;Path&gt;&gt;(path: P) -&gt; Result&lt;File&gt;
+pub fn create(path: &amp;Path) -&gt; Result&lt;File&gt;
             </code></pre>
 
             <aside class="notes">
