--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ numbers.retain(|num| *num >= 4);
 	  // - https://github.com/hakimel/reveal.js#configuration
 	  // - https://github.com/hakimel/reveal.js#dependencies
 	  Reveal.initialize({
-        controls: false,
+        controls: true,
         progress: true,
 		dependencies: [
 		  { src: 'plugin/markdown/marked.js' },
