Use an iframe to show docs.rs

--- a/index.html
+++ b/index.html
@@ -351,11 +351,11 @@ warning: unused `std::result::Result` that must be used
           </section>
 
           <section>
-            <img src="documentation.png">
+            <iframe src="https://doc.rust-lang.org/std/vec/struct.Vec.html" style="width: 100%; height: 16em;"></iframe>
           </section>
 
           <section>
-            <img src="inside_source.png">
+            <iframe src="https://docs.rs/" style="width: 100%; height: 16em;"></iframe>
           </section>
 
           <section>
